--- a/LPainter/LPainter/MasterViewController.xib
+++ b/LPainter/LPainter/MasterViewController.xib
@@ -79,7 +79,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <color key="color" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </colorWell>
-                <colorWell id="LbT-Za-TLm" userLabel="White" customClass="ColorView">
+                <colorWell identifier="white" id="LbT-Za-TLm" userLabel="White" customClass="ColorView">
                     <rect key="frame" x="5" y="85" width="60" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <color key="color" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
