--- a/LPainter/LPainter/Base.lproj/MainMenu.xib
+++ b/LPainter/LPainter/Base.lproj/MainMenu.xib
@@ -98,7 +98,7 @@
                             </menuItem>
                             <menuItem title="Save…" keyEquivalent="s" id="pxx-59-PXV">
                                 <connections>
-                                    <action selector="saveDocument:" target="-1" id="teZ-XB-qJY"/>
+                                    <action selector="savePainting:" target="Voe-Tx-rLC" id="HgQ-11-NiY"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Save As…" keyEquivalent="S" id="Bw7-FT-i3A">
